# minique

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  test.yml
minique/: _compat.py  api.py  cli.py  compat.py  consts.py  encoding.py  enums.py  excs.py  json.py  testing.py  types.py  utils.py
minique/models/: job.py  priority_queue.py  queue.py
minique/utils/: __init__.py  affinity.py  cleaning.py  redis_list.py
minique/work/: job_runner.py  worker.py
minique_tests/: conftest.py  jobs.py  test_affinity.py  test_cli.py  test_customization.py  test_errors.py  test_heartbeat.py  test_minique.py  test_priority.py  test_redis_list.py  test_utils.py  worker.py
requirements/: requirements-dev.in  requirements-dev.txt  requirements-lint.in  requirements-lint.txt  requirements-test.in  requirements-test.txt
