[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minique"
dynamic = ["version"]
description = "Minimal Redis job runner"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "Valohai", email = "hait@valohai.com" },
]
dependencies = [
    "redis>=2.10.0",
]

[project.optional-dependencies]
sentry = [
    "sentry_sdk~=1.10",
]
test = [
    "pytest-cov",
    "pytest>=6",
]

[project.scripts]
minique = "minique.cli:main"

[project.urls]
Homepage = "https://github.com/valohai/minique"

[tool.hatch.version]
path = "minique/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/minique",
]

[[tool.mypy.overrides]]
module = "sentry_sdk.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = [".git", ".tox"]
filterwarnings = [
    "error",
    "ignore:.*The distutils package.*:DeprecationWarning",
    "ignore:.*hmset.*deprecated.*:DeprecationWarning",
    "ignore:.*the imp module is deprecated in favour of importlib.*:DeprecationWarning",
    "ignore:.*the imp module is deprecated in favour of importlib.*:PendingDeprecationWarning",
]

[tool.ruff]
target-version = "py37"
ignore = ["E501"]
line-length = 88
select = [
    "B",
    "C9",
    "E",
    "F",
    "PGH003",
    "T2",
    "TRY201",
    "W",
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"minique_tests/**" = ["T2"]
