[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minique"
dynamic = ["version"]
description = "Minimal Redis job runner"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Valohai", email = "hait@valohai.com" },
]
dependencies = [
    "redis>=2.10.0",
]

[project.optional-dependencies]
sentry = [
    "sentry-sdk~=2.36",
]

[project.scripts]
minique = "minique.cli:main"

[project.urls]
Homepage = "https://github.com/valohai/minique"

[tool.hatch.version]
path = "minique/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/minique",
]

[[tool.mypy.overrides]]
module = "sentry_sdk.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = [".git", ".tox"]
filterwarnings = [
    "error",
    "ignore:.*The distutils package.*:DeprecationWarning",
    "ignore:.*the imp module is deprecated in favour of importlib.*:DeprecationWarning",
    "ignore:.*the imp module is deprecated in favour of importlib.*:PendingDeprecationWarning",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
mccabe.max-complexity = 10
ignore = [
    "E501",
]
select = [
    "B",
    "C9",
    "E",
    "F",
    "PGH003",
    "T2",
    "TRY201",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"minique_tests/**" = ["T2"]

[dependency-groups]
dev = [
    "mypy>=1.4.1",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "types-redis>=4.6.0.11",
]

[tool.coverage.run]
branch = true
omit = [
    "*site-packages*",
]

[tool.coverage.report]
exclude_also = [
    "except ImportError:",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "raise NotImplementedError",
]
