[metadata]
name = minique
version: attr:minique.__version__
description = Minimal Redis job runner
url = https://github.com/valohai/minique
author = Valohai
author_email = hait@valohai.com
maintainer = Aarni Koskela
maintainer_email = akx@iki.fi
license = MIT

[options]
install_requires =
    redis>=2.10.0
python_requires = >=3.6
# Non-serializable value options.extras_require
packages = find:
include_package_data = True

[options.extras_require]
sentry =
    sentry_sdk~=0.19.0

[options.packages.find]
exclude =
    minique_tests

[options.entry_points]
console_scripts =
    minique = minique.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203, E501, W503
max-complexity = 10

[pydocstyle]
ignore = D100,D104,D203,D212

[tool:pytest]
norecursedirs = .git .tox
filterwarnings =
    error
    ignore:.*The distutils package.*:DeprecationWarning
    ignore:.*hmset.*deprecated.*:DeprecationWarning
    ignore:.*the imp module is deprecated in favour of importlib.*:DeprecationWarning
    ignore:.*the imp module is deprecated in favour of importlib.*:PendingDeprecationWarning

[tox:tox]

[testenv]
passenv = REDIS_URL
commands = py.test {posargs}
deps = -r requirements/requirements-test.txt

[isort]
profile = black
multi_line_output = 5
